# to_core

./: .env  .gitignore  Cargo.toml
resources/test/: _to_store.db  create_empty_table.sql  existent_json_file.json  existent_sqlite_file.sqlite  generate_dir.bat  test_to_core.db  test_to_core.db-shm  test_to_core.db-wal
src/: lib.rs
src/db/: db_op.rs  mod.rs  to_db_op.rs  to_db_op_test.rs
src/entities/: mod.rs  to_marker.rs  to_ticket.rs  to_ticket_parse.rs  to_ticket_position.rs  to_ticket_write.rs
src/enums/: mod.rs  store_type.rs
src/error/: error_message.rs  mod.rs
src/parser/: mod.rs  parser.rs  parser_option.rs  to_parse.rs
src/to/: mod.rs  textual_object.rs  to_dto.rs  to_receipt.rs  to_struct.rs  to_ticket.rs
src/to/to_dtos/: mod.rs  to_add_dto.rs  to_find_dto.rs  to_scan_dto.rs
src/to_card/: mod.rs  to_card_convert_rule.rs  to_card_struct.rs
src/to_machine/: mod.rs  to_machine_db.rs  to_machine_op.rs  to_machine_option.rs  to_machine_pub_op.rs  to_machine_struct.rs
src/to_parser/: parser.rs  parser_option.rs
src/to_tag/: mod.rs  to_tag_struct.rs
src/to_ticket/: mod.rs  to_ticket_marker.rs  to_ticket_option.rs  to_ticket_parse.rs  to_ticket_position.rs  to_ticket_struct.rs  to_ticket_utils.rs  to_ticket_write.rs
src/to_ticket/parser/: parser.rs  parser_option.rs
src/utils/: check_if_file_exists.rs  get_random_test_database_dir.rs  id_generator.rs  mod.rs  split_store_path.rs
