[package]
name = "to_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoid = "0.4.0"
chrono = { version = "0.4.0", features = ["serde"] }
indexmap = { version = "1.9.1", features = ["serde"] }
regex = "1.6.0"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0"