[package]
name = "to_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoid = "0.4.0"
chrono = { version = "0.4.0", features = ["serde"] }
indexmap = { version = "1.9.1", features = ["serde"] }
regex = "1.6.0"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.82"
getrandom = { version = "0.2", features = ["js"] }
sqlx = { version = "0.6.1", features = [ "runtime-tokio-native-tls" , "sqlite", "uuid", "chrono", "json" ] }
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.2"
rand = "0.8.5"
uuid={version = "1.1.2", features = ["serde", "v4"]}
dotenv = "0.15.0"
ctor = "0.1.0"
utoipa = { version = "1.1.0", git = "https://github.com/juhaku/utoipa", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "1.1.0", git = "https://github.com/juhaku/utoipa", features = ["axum"] }
proc-macro-error = "1.0"
strum = "0.24.1"
strum_macros = "0.24.3"